src/test/ui/underscore-lifetime/where-clause-trait-impl-region.rust2018.stderr
error[E0637]: `&` without an explicit lifetime name cannot be used here
  --> $DIR/where-clause-trait-impl-region.rs:11:17
   |
LL |     T: WithType<&u32>
   |                 ^ explicit lifetime name needed here

error: aborting due to previous error

